[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathutil_d-chris"
version = "0.0.1"
authors = [{ name = "Christoph Dörrer" }]
description = "extend pathlib with some handy features"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/d-chris/pathutil"
"Bug Tracker" = "https://github.com/d-chris/pathutil/issues"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src/pathutil"
testpaths = "test"
# addopts = "--cov=src --cov-report=html:test/report"
